# pluggable-agent-framework

./: LICENSE  README.md  pyproject.toml
agents/: README.md  UI_EXTENSIONS.md
agents/_skeleton/: agent.json  ui-extensions.md.example
agents/coordinator/: IDENTITY.md  MEMORY.md  SOUL.md  expert.json
agents/designer/: IDENTITY.md  MEMORY.md  SOUL.md  expert.json
agents/developer/: IDENTITY.md  MEMORY.md  SOUL.md  expert.json
agents/sample/coordinator/: agent.json  ui-extensions.md
agents/sample/designer/: agent.json
agents/sample/developer/: agent.json
agents/sample/tester/: agent.json
agents/tester/: IDENTITY.md  MEMORY.md  SOUL.md  expert.json
assembler/: __init__.py  assemble.py  expert_loader.py  platform.py  team_loader.py
paf/: __init__.py
paf/assembler/: __init__.py  expert_loader.py  platform.py
teams/: README.md
teams/_skeleton/: template.json
teams/ace/: PURPOSE.md  template.json
teams/sample/ace/: template.json
